--- a/Yurry/reader/templates/group_home.html
+++ b/Yurry/reader/templates/group_home.html
@@ -16,13 +16,6 @@
 			<BR>
 			<BR>
 			
-			
-			
-			
-			
-
-			
-			
 			</div>
 		</div>
 		<div class="row clearfix">
@@ -40,8 +33,8 @@
 						<!-- rolling end -->
 							<!-- print each posting -->
 							{% for post in f %}
-							<div class="well well-sm">
-							<table border=0 cellpadding="5" style="background-color: #ECECF0"  width=100% >
+							
+							<table border=0 cellpadding="5" style="background-color: #DEDEF0"  width=100% >
 								<tr >
 								 <td valign=top width=60>
 								 	<img src="https://graph.facebook.com/{{post.from.id}}/picture" aligh=left width=40>
@@ -56,13 +49,30 @@
 									  
 									  </p>
 								  </td>
-								  
 								</tr>
+								{% for comment in post.comments.data %}
+								<tr style="background-color: #ECECF0">
+								 <td>
+								 </td>
+								 <td>
+								 	<table>
+								 	<tr>
+									 	<td valign=top width=60>
+									 		<img src="https://graph.facebook.com/{{comment.from.id}}/picture" aligh=left width=40>
+									 	</td>
+										<td>
+										 	<p style="font-size: 9pt ; font-family: 돋움">
+											<b>{{ comment.from.name }}</b>  <span class="glyphicon glyphicon-thumbs-up"></span> {{ comment.likes.data|length }}
+										 	{{ comment.message|linebreaksbr }}<BR>
+										 	</p>
+										</td>
+									</tr>
+									</table>
+								 </td>
+								</tr>
+								{% endfor %}
+								
 							</table>
-							
-							
-							
-							</div>
 							
 							{% endfor %}
 							
